overlapping issue fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/navigation/_navigation.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/navigation/_navigation.scss
@@ -135,4 +135,13 @@
             display: block;
         }
     }
+    @media #{$small-desktop} {
+        &__container {
+            .list-section-menu-links {
+                & > li {
+                    @include margin(0 6px);
+                }
+            }
+        }
+    }
 }
